--- a/packages/web/Dockerfile
+++ b/packages/web/Dockerfile
@@ -1,32 +1,22 @@
-FROM python:3.11-slim
+FROM node:20-alpine
 
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    postgresql-client \
-    && rm -rf /var/lib/apt/lists/*
+# Copy package files
+COPY packages/web/package.json packages/web/package-lock.json ./
 
-# Copy core package
-COPY ../core /app/core
+# Install dependencies
+RUN npm ci
 
-# Copy API package
-COPY . /app/api
-
-# Install Python dependencies
-RUN pip install --no-cache-dir --break-system-packages \
-    -e /app/core \
-    fastapi uvicorn sqlalchemy psycopg2-binary pydantic-settings
-
-WORKDIR /app/api
+# Copy source files
+COPY packages/web/ ./
 
 # Expose port
-EXPOSE 8000
+EXPOSE 3000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s \
-  CMD python -c "import requests; requests.get('http://localhost:8000/health')"
+  CMD wget --no-verbose --tries=1 --spider http://localhost:3000 || exit 1
 
-# Run application
-CMD ["uvicorn", "quant_lab_api.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run development server
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
