--- a/packages/web/Dockerfile
+++ b/packages/web/Dockerfile
@@ -3,10 +3,17 @@ FROM node:20-alpine
 WORKDIR /app
 
 # Copy package files
-COPY packages/web/package.json packages/web/package-lock.json ./
+COPY packages/web/package*.json ./
 
 # Install dependencies
-RUN npm ci
+# Use npm ci if package-lock.json exists, otherwise npm install
+RUN if [ -f package-lock.json ]; then \
+      echo "Using npm ci (package-lock.json found)"; \
+      npm ci; \
+    else \
+      echo "Using npm install (no package-lock.json)"; \
+      npm install; \
+    fi
 
 # Copy source files
 COPY packages/web/ ./
